--- a/index.html
+++ b/index.html
@@ -86,11 +86,16 @@
 						</div>
 						<div class="check bg-right overflow-auto">
 							<div class="text-area">
-								<div class="d-flex justify-content-start">
-									<div class="mymessage d-flex align-items-center ps-2 rounded">Churros!</div>
-								</div>
-								<div class="d-flex justify-content-end">
-									<div class="yourmessage d-flex align-items-center ps-2 rounded">Chimichanga!</div>
+								<div
+									class="d-flex mb-2"
+									:class="msg.status"
+									v-for="(msg, index) in contacts[activeUser].messages"
+									:key="index"
+								>
+									<div class="rounded p-2 message" :class="msg.status">
+										{{msg.message}}
+										<div class="time x-small text-end">{{msg.date}}</div>
+									</div>
 								</div>
 							</div>
 						</div>
